--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 asgiref==3.7.2
+crispy-bootstrap5==0.7
 Django==4.2.5
+django-crispy-forms==2.0
+django-summernote==0.8.20.0
 Pillow==10.0.1
 sqlparse==0.4.4
