--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
 asgiref==3.7.2
 crispy-bootstrap5==0.7
+dj-database-url==2.1.0
 Django==4.2.5
 django-crispy-forms==2.0
 django-summernote==0.8.20.0
+gunicorn==21.2.0
 Pillow==10.0.1
+psycopg2-binary==2.9.9
 sqlparse==0.4.4
