--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 asgiref==3.7.2
+cloudinary==1.36.0
 crispy-bootstrap5==0.7
 dj-database-url==2.1.0
+dj3-cloudinary-storage==0.0.6
 Django==4.2.5
 django-crispy-forms==2.0
 django-summernote==0.8.20.0
@@ -8,3 +10,4 @@ gunicorn==21.2.0
 Pillow==10.0.1
 psycopg2-binary==2.9.9
 sqlparse==0.4.4
+urllib3==1.26.15
